<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_city">

    <!-- Card Container -->
    <LinearLayout
        android:id="@+id/forgotCard"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"

        android:padding="24dp"
        android:background="@drawable/bg_card"
        android:layout_margin="32dp"

        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <!-- Email Label -->
        <TextView
            android:id="@+id/tvEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:text="@string/email"
            android:textColor="#FFFFFF"
            android:textSize="16sp"
            android:layout_marginBottom="8dp"/>

        <!-- Email Field -->
        <EditText
            android:id="@+id/etEmail"

            android:layout_width="match_parent"
            android:layout_height="48dp"

            android:hint="@string/enter_email"
            android:background="@drawable/bg_input"

            android:padding="12dp"

            android:inputType="textEmailAddress"
            android:autofillHints="emailAddress"

            android:textColor="#000000"
            android:textColorHint="#777777"

            android:layout_marginBottom="20dp"/>

        <!-- Button Bar -->
        <LinearLayout
            android:id="@+id/buttonBar"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:orientation="horizontal"
            android:gravity="end"

            style="?android:attr/buttonBarStyle">

            <!-- Cancel Button -->
            <Button
                android:id="@+id/btnCancel"

                android:layout_width="wrap_content"
                android:layout_height="48dp"

                android:text="@string/cancel"
                android:textColor="#FFFFFF"

                style="?android:attr/buttonBarButtonStyle"/>

            <!-- Reset Button -->
            <Button
                android:id="@+id/btnReset"

                android:layout_width="wrap_content"
                android:layout_height="48dp"

                android:text="@string/reset_password"

                android:layout_marginStart="60dp"

                android:background="@drawable/bg_button"/>

        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>